--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,1 +1,3 @@
-<p>body works!</p>
+<!-- <div>
+    <img src="/src/assets/background/nature-background-2.jpg" class="img-fluid" alt="...">
+</div> -->
