--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,3 +1,9 @@
-<!-- <div>
-    <img src="/src/assets/background/nature-background-2.jpg" class="img-fluid" alt="...">
-</div> -->
+<div>
+    <img src="/src/assets/profile/person.jpeg" class="img-fluid" alt="...">
+    <div class="container-fluid">
+        <h1>Repositories</h1>
+    </div>
+    <div class="page">
+        <app-form></app-form>
+    </div>
+</div>
