--- a/src/app/form/form.component.css
+++ b/src/app/form/form.component.css
@@ -13,4 +13,7 @@
 
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 41px;
+  position: absolute;
+  width: 712px;
+  height: 540px;
 }
