--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -2,10 +2,10 @@
     
      <div class="mb-3 ">
          <label for="exampleInputEmail1" class="form-label">Username</label>
-         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-         <div id="emailHelp" class="form-text">Please fill in your username</div>
+         <input type="text" class="form-control"  aria-describedby="emailHelp">
+         <div id="emailHelp" class="form-text text-light">Please fill in your username</div>
      </div>
-     <div class="mb-3">
+     <div class="mb-3 ">
          <label for="exampleInputPassword1" class="form-label">Password</label>
          <input type="password" class="form-control" id="exampleInputPassword1">
      </div>
