--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -4,3 +4,11 @@
 .page {
   margin-left: 32%;
 }
+
+.repo {
+  position: absolute;
+  right: 150px;
+  width: 300px;
+  height: 50%;
+  border: 3px solid green;
+}
