--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,9 +1,9 @@
 <div>
-    <img src="/src/assets/profile/person.jpeg" class="img-fluid" alt="...">
-    <div class="container-fluid">
+    <img src="/src/assets/profile/person.jpeg"  alt="...">
+    <div class="container repo">
         <h1>Repositories</h1>
     </div>
-    <div class="page">
+    <!-- <div class="page">
         <app-form></app-form>
-    </div>
+    </div> -->
 </div>
