--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,6 +1,6 @@
-<form id="form">
+<form id="form" class="container">
     
-     <div class="mb-3 ">
+     <div class="mb-3">
          <label for="exampleInputEmail1" class="form-label">Username</label>
          <input type="text" class="form-control"  aria-describedby="emailHelp">
          <div id="emailHelp" class="form-text text-light">Please fill in your username</div>
@@ -13,6 +13,9 @@
          <input type="checkbox" class="form-check-input" id="exampleCheck1">
          <label class="form-check-label" for="exampleCheck1">Check me out</label>
      </div>
+   <div class="send ">
+    <button type="submit" class="btn  btn-primary">Submit</button>
+   </div>
     
-    <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+
