--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,4 +1,7 @@
 <div>
+<app-navbar></app-navbar>
+</div>
+<div>
     <img src="/src/assets/profile/person.jpeg"  alt="...">
     <div class="container repo">
         <h1>Repositories</h1>
