router links added

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,13 +5,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link-active">Home</a>
                 </li>
                 <li class="nav-item ">
-                    <a class="nav-link" href="#">Login</a>
+                    <a class="nav-link nav-link-active"routerLink="login" routerLinkActive="active">Login</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Logout</a>
+                    <a class="nav-link nav-link-active" routerLink="logout" routerLinkActive="active">Logout</a>
                 </li>
                 
             </ul>
