modified some files codes

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,10 +1,10 @@
-
-<div>
-    <img src="/src/assets/profile/person.jpeg"  alt="...">
-    <div class="container repo">
-        <h1>Repositories</h1>
+<div class="container">
+    <div class="card-body text-primary">
+        <h5 class="card-title"> <span class="text-warning">Github Search</span ></h5>
+        <p class="card-text">This is a Github profile where you can type the username of  
+            <br> 
+            a github profile in a search.</p>
     </div>
-    <!-- <div class="page">
-        <app-form></app-form>
-    </div> -->
 </div>
+
+    
