--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,14 +1,15 @@
-/* body {
-  background-image: url("/src/assets/background/nature-background-2.jpg");
-} */
+.container {
+  width: 100%;
+  height: 100%;
+}
 .page {
   margin-left: 32%;
 }
-
-.repo {
-  position: absolute;
-  right: 150px;
-  width: 300px;
-  height: 50%;
-  border: 3px solid green;
+.card-title {
+  font-size: 60px;
+  font-family: "Times New Roman", Times, serif;
+}
+.card-text {
+  font-size: 30px;
+  font-family: "Times New Roman", Times, serif;
 }
