--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,24 +1,18 @@
-<nav class="navbar navbar-expand-lg navbar-light   "id="nav">
-    <div class="container-fluid">
-        <!-- <div class="img"></div> -->
-     
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+    <div class="container">
+        <a href="#" class="navbar-brand">Github Search  App</a>
+        <div class="collapse navbar-collapse" id="navmenu"> 
+            <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link-active">Home</a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link nav-link-active"routerLink="login" routerLinkActive="active">Login</a>
+                    <a href="Home" class="nav-link">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link nav-link-active" routerLink="logout" routerLinkActive="active">Logout</a>
+                    <a href="About" class="nav-link">About</a>
                 </li>
-                
+                <li class="nav-item">
+                    <a href="About" class="nav-link">search</a>
+                </li>
+               
             </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
         </div>
-    </div>
-</nav>
