--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
-body {
+/* body {
   background-image: url("../src/assets/background/nature-background-2.jpg");
-}
+} */
