added search component

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,10 +1,16 @@
-<div class="container">
-    <div class="card-body text-primary">
+<div class="body ">
+    <div class="card-body text-dark">
         <h5 class="card-title"> <span class="text-warning">Github Search</span ></h5>
-        <p class="card-text">This is a Github profile where you can type the username of  
-            <br> 
-            a github profile in a search.</p>
+        <p class="card-text">This is a Github profile where you <br> can type the username of  <br> a github profile in a search.</p>
     </div>
 </div>
+<!-- <section class="bg-dark text-light p-5 text-center">
+    <div classs="container">
+        <div class="d-sm-flex">
+            <h1>This is a Github profile where you <br> can type the username of <br> a github profile in a search.</h1>
+        </div>
+        img class="image-fluid w-50" src="../../assets/design-teamwork.png"
+    </div>
+</section> -->
 
     
