--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,6 +1,15 @@
-<div class="container bg-dark">
-    <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit">Search</button>
-    </form>
+<div class="search">
+    <h3>Enter your username</h3>
+
+    <div class="">
+        <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="username" aria-label="Search">
+            <button class="btn btn-outline-dark" type="submit">Search</button>
+        </form>
+    </div>
 </div>
+
+
+
+
+
