--- a/src/app/body/body.component.css
+++ b/src/app/body/body.component.css
@@ -1,6 +1,9 @@
-.container {
-  width: 100%;
-  height: 100%;
+* {
+  background-image: url("../../assets/background/nature-background-2.jpg");
+  background-repeat: no-repeat;
+}
+.body {
+  height: 100vh;
 }
 .page {
   margin-left: 32%;
