--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,14 +5,16 @@
         <div class="collapse navbar-collapse" id="navmenu"> 
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a href="Home" class="nav-link">Home</a>
+                    <a class="nav-link" routerLink="Home" routerLinkActive='active'>Home</a>
                 </li>
                 <li class="nav-item">
-                    <a href="About" class="nav-link">About</a>
+                    <a class="nav-link" routerLink="About" routerLinkActive='active'>About</a>
                 </li>
                 <li class="nav-item">
-                    <a href="About" class="nav-link">search</a>
+                    <a class="nav-link" routerLink="search" routerLinkActive='active'>search</a>
                 </li>
                
             </ul>
         </div>
+    </div>
+</nav>      
