--- a/src/app/search/search.component.css
+++ b/src/app/search/search.component.css
@@ -1,10 +1,20 @@
 * {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
+  /* background: linear-gradient(0deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
     linear-gradient(
       180deg,
       rgba(130, 53, 142, 0.51) 11.46%,
       rgba(235, 240, 243, 0.829592) 55.21%,
       rgba(46, 174, 182, 0.63) 100%
+    ); */
+  background: linear-gradient(
+      0deg,
+      rgba(160, 196, 168, 0.14),
+      rgba(160, 196, 168, 0.14)
+    ),
+    linear-gradient(
+      180deg,
+      rgba(84, 97, 210, 0.5) 56.93%,
+      rgba(10, 252, 5, 0.5) 99.81%
     );
 }
 .search {
