--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,11 +1,15 @@
 <div class="body ">
-    <div class="card-body text-dark">
+    <div class="card-body d-sm-flex  text-dark">
         <h5 class="card-title"> <span class="text-warning">Github Search</span ></h5>
-        <p class="card-text">This is a Github profile where you <br> can type the username of  <br> a github profile in a search.</p>
+            <div>
+               <img clas="images" src="../../assets/person-male--v3.png" alt="image">
+            </div>
+        <p class="card-text">Github search app is an Angular App that diplays the necessary repositories by retrieving the user data from Github
+        API.By simply submitting your username ,details such as your profile  picture and the number of repositories you have will be displayed</p>
     </div>
 </div>
 <!-- <section class="bg-dark text-light p-5 text-center">
-    <div classs="container">
+    <div class="container">
         <div class="d-sm-flex">
             <h1>This is a Github profile where you <br> can type the username of <br> a github profile in a search.</h1>
         </div>
