implemented a new linear color

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -3,11 +3,27 @@
 
     <div class="">
         <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="username" aria-label="Search">
+            <input class="form-control me-2" type="search" placeholder="Github Username" aria-label="Search">
             <button class="btn btn-outline-dark" type="submit">Search</button>
         </form>
-    </div>
+        <div class="card mb-3" style="max-height: 578px;">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img src="../../assets/person-male--v3.png" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="card-body">
+                    <h5 class="card-title">Repositories</h5>
+                    
+                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+               </div>
+                     
+                
+            </div>
+        
+    </div>   
 </div>
+
+
 
 
 
