--- a/src/app/form/form.component.html
+++ b/src/app/form/form.component.html
@@ -1,20 +1,27 @@
-<!-- <div class="row mt100" *ngIf="showInput">
-    <div class="col-md-2"></div>
-    <div class="col-md-8 git-form">
-        <h1 class="heading">Github Search</h1>
-        <img class="mb15" src="./assets/images/logo.png">
-        <form (ngSubmit)='submitUsername()' #gitForm='ngForm' name="gitForm">
-            <div class="row">
-                <div class="col-md-3"></div>
-                <div class="col-md-6">
-                    <input type="text" class="form-control input-lg mb15 user-input" id="username"
-                        [(ngModel)]="username" name="username" autocomplete="off" placeholder="Github Username">
-                    <button type="submit" class="btn btn-success btn-lg btn-block">Search GitHub User & Repos</button>
-                </div>
-                <div class="col-md-3"></div>
-            </div>
-        </form>
+<form (ngSubmit)="getUsername(Userinput)">
+    <div class="d-flex">
+        <input name="username" [(ng module)]="Username"class="form-control me-2" type="search" placeholder="Search" aria-label="Search" />
+        <button class="btn btn-outline-success" type="submit">Search</button>
     </div>
-    <div class="col-md-2"></div>
+
+    <div class="form-group form-check"></div>
+    <button [disabled]="Userinput.length==0" type="submit" class="btn btn-primary">Submit</button>
+</form>
+<div class="container" *ngIf="user">
+<div class="row">
+    <div class="col-lg-6">
+        <div class="card">
+            <div class="card-body">
+                <div class="card-title">
+                    <h4>{{user.login}} </h4>
+                </div>
+                <div class="card-text">
+                    <p>followers:{{user.followers}} </p>
+                    <p>following:{{user.following}} </p>
+                    <a href="{{user.html_url}}" target="_blank">githuburl</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-<app-git-search-results *ngIf="showData" (toggleBack)="showUserInput($event)"></app-git-search-results> -->
+</div>
