--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,11 +1,11 @@
 
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
     <div class="container">
-        <a href="#" class="navbar-brand">Github Search  App</a>
+        <a routerLink="/" class="navbar-brand">Github Search  App</a>
         <div class="collapse navbar-collapse" id="navmenu"> 
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="Home" routerLinkActive='active'>Home</a>
+                    <a class="nav-link" routerLink="/">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" routerLink="About" routerLinkActive='active'>About</a>
