--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,4 +1,4 @@
-<div class="search">
+<!-- <div class="search">
     <h3>Enter your username</h3>
 
     <div class="">
@@ -28,4 +28,4 @@
 
 
 
-
+ -->
