--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -5,13 +5,13 @@
         <div class="collapse navbar-collapse" id="navmenu"> 
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/">Home</a>
+                    <a class="nav-link" routerLink="/body">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="About" routerLinkActive='active'>About</a>
+                    <a class="nav-link" routerLink="/body" routerLinkActive='active'>About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="search" routerLinkActive='active'>search</a>
+                    <a class="nav-link" routerLink="/search" >search</a>
                 </li>
                
             </ul>
