--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -2,13 +2,11 @@
 <h1 class="size">Enter your username</h1>
 <form class="form"(ngSubmit)="getUsername(UserInput)">
     <div class="d-flex">
-        <input name="username" [(ngModel)]="username" class="form-control me-2" type="search" placeholder="Search"
+        <input name="username" [(ngModel)]="UserInput" class="form-control me-2" type="search" placeholder="Search"
             aria-label="Search"  #username='ngModel'/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button [disabled]="UserInput.length==0" class="btn btn-outline-success" type="submit">Search</button>
     </div>
 
-    <div class="form-group form-check"></div>
-    <button [disabled]="UserInput.length==0" type="submit" class="btn btn-primary">Submit</button>
 </form>
 <div class="container" *ngIf="user">
     <div class="row">
